istio/mtls.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: mtls-only-policy
  namespace: <PROJECT>
spec:
  mtls:
    mode: STRICT
