istio/compositeop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compositeop-v1
  namespace: <PROJECT>
  labels:
    app: compositeop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: compositeop
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: compositeop
        version: v1
    spec:
      containers:
      - image: <CONTAINER>
        name: compositeop-container
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compositeop-v2
  namespace: <PROJECT>
  labels:
    app: compositeop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: compositeop
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: compositeop
        version: v2
    spec:
      containers:
      - image: <CONTAINER>
        name: compositeop-container
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compositeop-v3
  namespace: <PROJECT>
  labels:
    app: compositeop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: compositeop
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: compositeop
        version: v3
    spec:
      containers:
      - image: <CONTAINER>
        name: compositeop-container
