istio/divide-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: divide
  namespace: <PROJECT>
  labels:
    app: divide
spec:
  replicas: 1
  selector:
    matchLabels:
      app: divide
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: divide
    spec:
      containers:
      - name: divide
        image: <CONTAINER>
