istio/processor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: processor
  namespace: <PROJECT>
  labels:
    app: processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: processor
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: processor
    spec:
      containers:
      - image: <CONTAINER>
        name: processor-container
