istio/add-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: add
  namespace: <PROJECT>
  labels:
    app: add
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: add
