istio/divide-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: divide
  namespace: <PROJECT>
  labels:
    app: divide
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: divide
