istio/multiply-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multiply
  namespace: <PROJECT>
  labels:
    app: multiply
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: multiply
