istio/processor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: processor
  namespace: <PROJECT>
  labels:
    app: processor
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: processor
