istio/subtract-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: subtract
  namespace: <PROJECT>
  labels:
    app: subtract
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: subtract
