istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: calculator-gateway
  namespace: <PROJECT>
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - hosts:
    - "*"
    port:
      number: 80
      name: http
      protocol: HTTP
