istio/destinationrules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: add
  namespace: <PROJECT>  
spec:
  host: add
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: subtract
  namespace: <PROJECT>  
spec:
  host: subtract
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL    
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: multiply
  namespace: <PROJECT>  
spec:
  host: multiply
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL    
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: divide
  namespace: <PROJECT>  
spec:
  host: divide
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: compositeop
  namespace: <PROJECT>
spec:
  host: compositeop
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL  
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: processor
  namespace: <PROJECT>  
spec:
  host: processor
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
