istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: calculator
  namespace: <PROJECT>
spec:
  hosts:
  - "*"
  gateways:
  - calculator-gateway
  http:
  - match:
    - uri:
        exact: /basicop/add
    route:
    - destination:
        host: add
        port:
          number: 8080
  - match:
    - uri:
        exact: /basicop/subtract
    route:
    - destination:
        host: subtract
        port:
          number: 8080
  - match:
    - uri:
        exact: /basicop/multiply
    route:
    - destination:
        host: multiply
        port:
          number: 8080
  - match:
    - uri:
        exact: /basicop/divide
    route:
    - destination:
        host: divide
        port:
          number: 8080
  - match:
    - uri:
        exact: /compositeop/mean
    - uri:
        exact: /compositeop/square
    - uri:
        exact: /compositeop/cube
    - uri:
        exact: /compositeop/eval 
    - uri:
        exact: /compositeop/evalrpnexpr                 
    route:
    - destination:
        host: compositeop
        port:
          number: 8080
  - match:
    - uri:
        exact: /processor/calculate
    route:
    - destination:
        host: processor
        port:
          number: 8080
